--- a/ualive/css/style.css
+++ b/ualive/css/style.css
@@ -1189,7 +1189,7 @@ label{
         background-color: #f5f5f5;
         -webkit-transition: left .3s linear;
         -o-transition: left .3s linear;
-        transition: left .3s linear;
+        transition: all .3s linear;
     }
 
     .main .aside-left.show{
